# transAPI

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml.sample  settings.py
src/api/endpoints/: chat_completions.py  completions.py  health.py  list_models.py  tokenizer.py
src/api/types/: chat_completions.py  completions.py  model_list.py  samplers.py  tokenize.py  tool_call.py  usage_info.py
src/api/utils/: dependencies.py  format_sse.py
src/core/: engine.py  loader.py
